# mlops-zoomcamp-epam

./: .gitignore  .swp  README.md  pyproject.toml
01-intro/: 01-env-prep.ipynb  01-pandas-prerequisite.ipynb  02-env-prep.ipynb  02-training-ride-prediction.ipynb  03-training-ride-prediction.ipynb  First.ipynb  homework.ipynb  pandas-prerequisite.html  pandas-prerequisite.ipynb
02-experiment-tracking/: duration-prediction.ipynb  homework.ipynb  hpo.py  register_model.py  train.py
02-experiment-tracking/02-experiment-tracking/: duration-prediction.ipynb
02-experiment-tracking/mlruns/1/models/m-34aab094a945489cb7b1bc46a78d91f3/artifacts/: MLmodel  conda.yaml  python_env.yaml  requirements.txt
02-experiment-tracking/mlruns/2/3dff746a0bb44887ae36474b64af409c/artifacts/: estimator.html  metric_info.json
02-experiment-tracking/mlruns/2/models/m-b75669f6d90c4312959523d57a7249ba/artifacts/: MLmodel  conda.yaml  requirements.txt
02-experiment-tracking/output/: dv.pkl
03-orchestration/: .env  README.md  cluster-config.yaml  docker-compose.yaml  mlflow.dockerfile  old.Dockerfile  pv.yaml  pvc.yaml  values.yaml
03-orchestration/config/: airflow.cfg
03-orchestration/dags/: data_prediction.py  new_simple.py  s3_upload_test.py  simple_dag.py
models/: preprocessor.b
